# ai-week

./: CLAUDE.md  LUT_IMPLEMENTATION_PLAN.md  README.md  TEST_RESTRUCTURE_PLAN.md  connect-cef.js
mmhmm-hybrid/mmhmm-hybrid/: CMakeLists.txt  application_context.cc  application_context.h  features.cc  features.h  mmhmm-hybrid_mac.mm  mmhmm-hybrid_win.cc  process_helper_mac.cc
mmhmm-hybrid/mmhmm-hybrid/browser/: browser_event_handler.h  browser_event_handler_mac.cc  browser_event_handler_win.cc  browser_window.h  browser_window_std_mac.h  browser_window_std_mac.mm  browser_window_std_win.cc  browser_window_std_win.h  bytes_write_handler.cc  bytes_write_handler.h  client_app_browser.cc  client_app_browser.h  client_browser.cc  client_browser.h  client_handler.cc  client_handler.h  client_handler_std.cc  client_handler_std.h  client_media_request_handler_factory.cc  client_media_request_handler_factory.h  client_prefs.cc  client_prefs.h  client_request_handler_factory.cc  client_request_handler_factory.h  client_types.h  file_util.h  geometry_util.cc  geometry_util.h  hybrid_bridge_callback_handler.h  image_cache.cc  image_cache.h  main_context.h  main_context_impl.cc  main_context_impl.h  main_context_impl_posix.cc  main_message_loop.h  main_message_loop_external_pump.cc  main_message_loop_external_pump.h  main_message_loop_external_pump_mac.mm  main_message_loop_external_pump_win.cc  (+39 more)
mmhmm-hybrid/mmhmm-hybrid/common/: api_version.cc  api_version.h  app_capabilities.cc  app_capabilities.h  app_windows.cc  app_windows.h  async_javascript_processor.cc  async_javascript_processor.h  binary_value_utils.h  cef_process_message_handler.h  cef_process_message_handler_browser.cc  cef_process_message_handler_renderer.cc  cef_value_utility.cc  cef_value_utility.h  client_app.h  client_app_delegates_common.cc  client_app_other.h  client_switches.cc  client_switches.h  dictionary_utils.cc  dictionary_utils.h  edge_light_monitor.cc  edge_light_monitor.h  edge_light_monitor_browser.cc  edge_light_monitor_browser.h  edge_light_monitor_renderer.cc  edge_light_monitor_renderer.h  event_proxy.cc  event_proxy.h  event_proxy_browser.cc  event_proxy_browser.h  event_proxy_renderer.cc  event_proxy_renderer.h  exceptions.h  hybrid_object.h  login_item_installer.cc  login_item_installer.h  login_item_installer_browser.cc  login_item_installer_browser.h  login_item_installer_renderer.cc  (+30 more)
mmhmm-hybrid/mmhmm-hybrid/messages/: Handler.h  Message.h
mmhmm-hybrid/mmhmm-hybrid/messages/floating-nav/: LaunchFloatingNav.cc  LaunchFloatingNav.h
mmhmm-hybrid/mmhmm-hybrid/messages/toolbox/: ChangeAppMode.cc  ChangeAppMode.h
mmhmm-hybrid/mmhmm-hybrid/mini-remote/: shared_mini_remote_manager.h  shared_mini_remote_manager_impl.cpp  shared_mini_remote_manager_impl.h
mmhmm-hybrid/mmhmm-hybrid/power-observer/: power_observer.h  power_observer_create.cc  power_observer_mac.h  power_observer_win.cc  power_observer_win.h
mmhmm-hybrid/mmhmm-hybrid/renderer/: client_app_delegates_renderer.cc  client_app_renderer.cc  client_app_renderer.h  client_renderer.h  floating_nav_handler.cc  floating_nav_handler.h  hybrid_capabilities.cc  hybrid_capabilities.h  javascript_callback.cc  javascript_callback.h  js_callback_handler.cc  js_callback_handler.h  mini_remote_handler.cc  mini_remote_handler.h  screen_share_handler.cc  screen_share_handler.h  segmentation_panel_handler.cc  segmentation_panel_handler.h  stream_deck_handler.cc  stream_deck_handler.h  toolbox_handler.cc  toolbox_handler.h
mmhmm-hybrid/mmhmm-hybrid/resources/win/: Airtime.exe.manifest  mmhmm-hybrid.rc  resource.h
mmhmm-hybrid/mmhmm-hybrid/segmentation-panel/: segmentation_panel_manager.cc  segmentation_panel_manager.h  segmentation_panel_manager_mac.cc  segmentation_panel_manager_win.cc
mmhmm-hybrid/mmhmm-hybrid/segmentation-warmup/: FileUtils.h  SplashScreen.cpp  SplashScreen.h  WarmupManager.cpp  WarmupManager.h
mmhmm-hybrid/mmhmm-hybrid/streamDeck/: sdEffectIcons.h  sdEnums.h  sdLog.h  sdManager.cpp  sdManager.h  sdMessage.cpp  sdMessage.h  sdMessageSink.cpp  sdMessageSink.h  sdMessageTranslator.h  sdWebSocketClient.cpp  sdWebSocketClient.h
mmhmm-hybrid/mmhmm-hybrid/tests/: CMakeLists.txt  test_main.cc
mmhmm-hybrid/mmhmm-hybrid/web/css/: hybrid-api-tester.css  mini-remote.css  offline.css  screenshare.css  segmentation-panel.css  settings.css  streamdeck.css  style.css  toolbox.css
mmhmm-hybrid/mmhmm-hybrid/web/edge-light/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/floating-camera-nav/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/hybrid-api-tester/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/mini-remote/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/offline/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/screenshare/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/segmentation-panel/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/settings/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/streamdeck/: index.html
mmhmm-hybrid/mmhmm-hybrid/web/toolbox/: index.html
mmhmm-hybrid/mmhmm-hybrid/win/: app_config.h  app_config.h.in  app_manager.cc  app_manager.h  app_settings_service.cc  app_settings_service.h  app_sizes.h  app_track.cc  app_track.h  app_updater_service.cc  app_updater_service.h  camera_statistics_client_event.h  capture_utils.cc  capture_utils.h  deep_link_info.cc  deep_link_info.h  dwm_thumbnail_capture.cc  dwm_thumbnail_capture.h  file_utils.cc  file_utils.h  file_version.cc  file_version.h  hot_key.cc  hot_key.h  hot_key_manager.cc  hot_key_manager.h  installer_info.h  json_reader.cc  json_reader.h  mixpanel_service.cc  mixpanel_service.h  shmem.cc  shmem.h  singleton_win.cc  singleton_win.h  system_info.cc  system_info.h  system_report.cc  system_report.h  tray_app.cc  (+9 more)
mmhmm-hybrid/mmhmm-hybrid/win/controls/: base_control.cpp  base_control.h  camera_status_control.cc  camera_status_control.h  colors.h  exceptions.h  image_loader.cpp  image_loader.h  layout.h  overlay_manager.cc  overlay_manager.h  overlay_window.cc  overlay_window.h  svg_renderer.cpp  svg_renderer.h  titlebar.cc  titlebar.h  titlebar_button.cc  titlebar_button.h
(+1341 files in other folders)
